retrait nicolas rey

--- a/autres.html
+++ b/autres.html
@@ -89,7 +89,7 @@
       </figcaption>
     </figure>-->
 
-    <!--Autres 6-->
+    <!--Autres 6
     <figure>
       <a href="https://shop.gotaga.tv/accessoires/60-tumbler-list.html" target="_blank"> <img src="https://shop.gotaga.tv/763-large_default/tumbler-list.jpg"
           alt="Tumbler Gotaga" class="others" /></a>
@@ -99,7 +99,7 @@
       <figcaption>
         20,00€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Autres 7
     <figure>
