--- a/livres.html
+++ b/livres.html
@@ -5252,7 +5252,7 @@
   </div>
 
   <div class="booksLine">
-    <!--Livre 97-->
+    <!--Livre 97
     <figure>
       <a href="https://www.amazon.fr/Cr%C3%A9dit-illimit%C3%A9-Nicolas-Rey/dp/B09WZWRWZR/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1664123854&sr=8-1"
         target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/31CXu3dfKvL.jpg" alt="Crédit illimité" class="books" /></a>
@@ -5265,7 +5265,7 @@
       <figcaption>
         18,00€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Livre 98-->
     <figure>
