--- a/livres.html
+++ b/livres.html
@@ -5317,20 +5317,23 @@
   </div>
 
   <div class="booksLine">
-    <!--Livre 97
+    <!--Livre 97-->
     <figure>
-      <a href="https://www.amazon.fr/Derri%C3%A8re-porte-verte-Bernard-LIONS/dp/226317463X/ref=msx_wsirn_v1_3?pd_rd_w=KBmBG&pf_rd_p=0a0d9834-bf34-40cf-870c-8760e04a32b7&pf_rd_r=TJ8W0C94D8VJAWGRRDJG&pd_rd_r=2ed4b53a-8dcb-44b2-ae20-3379c41da5fa&pd_rd_wg=1AeVK&pd_rd_i=226317463X&psc=1"
-        target="_blank"> <img src="https://www.amazon.fr/images/I/41by02c4o7L.jpg" alt="Derrière la porte verte" class="books" /></a>
+      <a href="https://www.amazon.com.be/Chagrin-dhumour-S%C3%A9bastien-Thoen/dp/B0B4ZXG99C/ref=sr_1_1?crid=JOOIEJJ366AJ&keywords=sebastien+thoen&qid=1666386436&sprefix=sebastien+thoen%2Caps%2C61&sr=8-1"
+        target="_blank"> <img src="https://m.media-amazon.com/images/I/81wzbcDMQ9L.jpg" alt="Chagrin d'humour" class="books" /></a>
       <figcaption>
-        Bernard Lions
+        Sébastien Thoen
       </figcaption>
       <figcaption>
-        Derrière la porte verte
+        Chagrin d'humour
       </figcaption>
       <figcaption>
-        17,90€
+        18,90€
       </figcaption>
-    </figure>-->
+      <figcaption>
+        Sortie le 2 novembre
+      </figcaption>
+    </figure>
 
     <!--Livre 98
     <figure>
