--- a/livres.html
+++ b/livres.html
@@ -5335,20 +5335,20 @@
       </figcaption>
     </figure>
 
-    <!--Livre 98
+    <!--Livre 98-->
     <figure>
-      <a href="https://www.amazon.fr/vie-continue-Bernard-Pivot/dp/2226451323/ref=msx_wsirn_v1_2?pd_rd_w=KBmBG&pf_rd_p=0a0d9834-bf34-40cf-870c-8760e04a32b7&pf_rd_r=TJ8W0C94D8VJAWGRRDJG&pd_rd_r=2ed4b53a-8dcb-44b2-ae20-3379c41da5fa&pd_rd_wg=1AeVK&pd_rd_i=2226451323&psc=1"
-        target="_blank"> <img src="https://www.amazon.fr/images/I/71RcLpRTVaL.jpg" alt="... Mais la vie continue" class="books" /></a>
+      <a href="https://www.amazon.fr/Sans-preuve-sans-Philippe-Jaenada/dp/2080291238/ref=sr_1_1?crid=1FLIDSS5K62OD&keywords=jaenada+sans+preuve+et+sans+aveu&qid=1666814910&sprefix=jaen%2Caps%2C83&sr=8-1"
+        target="_blank"> <img src="https://m.media-amazon.com/images/I/5190VoCh3ZL.jpg" alt="Sans preuve et sans aveu" class="books" /></a>
       <figcaption>
-        Bernard Pivot
+        Philippe Jaenada
       </figcaption>
       <figcaption>
-        ... Mais la vie continue
+        Sans preuve et sans aveu
       </figcaption>
       <figcaption>
-        19,90€
+        19,00€
       </figcaption>
-    </figure>-->
+    </figure>
 
     <!--Livre 99
     <figure>
