--- a/autres.html
+++ b/autres.html
@@ -21,32 +21,29 @@
   </navbar>
 
   <div class="othersLine">
-    <!--Autres 1
+    <!--Autres 1-->
     <figure>
-      <a href="https://www.amazon.fr/Alimentation-Multiprise-r%C3%A9partiteur-interrupteurs-individuels/dp/B08KXY2B5T/ref=sr_1_21?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=1ZQZGW3ZUUFYT&keywords=multi+usb&qid=1660929494&sprefix=multi+usb%2Caps%2C73&sr=8-21" target="_blank"> <img
-          src="https://m.media-amazon.com/images/I/71V7cnynmLL._AC_SL1500_.jpg" alt="Port Multi USB" class="others" /></a>
+      <a href="https://www.amazon.fr/Original-Coll%C3%A8gue-Amoureux-Anniversaire-Plaisir/dp/B093FSM654/ref=sr_1_9?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=2IT6ROK2VG69G&keywords=tasse+bite+enorme&qid=1668301136&qu=eyJxc2MiOiIyLjMzIiwicXNhIjoiMC4wMCIsInFzcCI6IjAuMDAifQ%3D%3D&sprefix=tasse+bite+enorme%2Caps%2C70&sr=8-9" target="_blank"> <img
+          src="https://m.media-amazon.com/images/I/51MXDb8suVL._AC_SL1000_.jpg" alt="Tasse" class="others" /></a>
       <figcaption>
-        Multi ports USB
-      </figcaption>
-      <figcaption>
-        37,46€
-      </figcaption>
-    </figure>-->
-
-    <!--Autres 2
-    <figure>
-      <a href="https://www.amazon.fr/Esprits-Criminels-Saison-15-DVD/dp/B08JDTNP9V/ref=sr_1_1?keywords=esprits+criminels+saison+15&qid=1641825568&sprefix=esprits+cr%2Caps%2C80&sr=8-1" target="_blank"> <img
-          src="https://m.media-amazon.com/images/I/91i3HLDQkZL._AC_SL1500_.jpg" alt="Esprits Criminels 15" class="others" /></a>
-      <figcaption>
-        Esprits Criminels
-      </figcaption>
-      <figcaption>
-        Saison 15
+        Tasse
       </figcaption>
       <figcaption>
         19,99€
       </figcaption>
-    </figure>-->
+    </figure>
+
+    <!--Autres 2-->
+    <figure>
+      <a href="https://www.amazon.fr/After-Foot-Qatar-quoi-co%C3%BBte/dp/2492740064/ref=sr_1_1?crid=1NVFQOT8R1FCF&keywords=after+foot+la+revue&qid=1668301335&qu=eyJxc2MiOiIyLjcwIiwicXNhIjoiMi42MyIsInFzcCI6IjIuNjQifQ%3D%3D&sprefix=after+f%2Caps%2C79&sr=8-1" target="_blank"> <img
+          src="https://m.media-amazon.com/images/I/61kQQvJPjnL.jpg" alt="After Foot - N° 7" class="others" /></a>
+      <figcaption>
+        After Foot : la revue n° 7
+      </figcaption>
+      <figcaption>
+        13,90€
+      </figcaption>
+    </figure>
 
     <!--Autres 3
     <figure>
