--- a/livres.html
+++ b/livres.html
@@ -5252,20 +5252,20 @@
   </div>
 
   <div class="booksLine">
-    <!--Livre 97
+    <!--Livre 97-->
     <figure>
-      <a href="https://www.amazon.fr/Cr%C3%A9dit-illimit%C3%A9-Nicolas-Rey/dp/B09WZWRWZR/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1664123854&sr=8-1"
-        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/31CXu3dfKvL.jpg" alt="Crédit illimité" class="books" /></a>
+      <a href="https://www.amazon.fr/Quand-avocats-font-lHistoire-lAntiquit%C3%A9/dp/2226460624/ref=sr_1_1?keywords=quand+les+avocats+font+l%27histoire&qid=1668300956&qu=eyJxc2MiOiItMC4wMCIsInFzYSI6IjAuMDAiLCJxc3AiOiIwLjAwIn0%3D&sprefix=quand+les+avo%2Caps%2C79&sr=8-1"
+        target="_blank"> <img src="https://m.media-amazon.com/images/I/71znWq+engL.jpg" alt="Quand les avocats font l'Histoire" class="books" /></a>
       <figcaption>
-        Nicolas Rey
+        Emmanuel Pierrat
       </figcaption>
       <figcaption>
-        Crédit illimité
+        Quand les avocats font l'Histoire
       </figcaption>
       <figcaption>
-        18,00€
+        21,90€
       </figcaption>
-    </figure>-->
+    </figure>
 
     <!--Livre 98-->
     <figure>
@@ -5350,97 +5350,109 @@
       </figcaption>
     </figure>
 
-    <!--Livre 99
+    <!--Livre 99-->
     <figure>
-      <a href="https://www.amazon.fr/Messy-Kitchen-Deliciously-Fabulously-Copiously/dp/1682619389/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=renee+paquette&qid=1623591705&sr=8-1" target="_blank"> <img
-          src="https://images-na.ssl-images-amazon.com/images/I/81d-hgRC2eL.jpg" alt="Renee Paquette cuisine" class="books" /></a>
+      <a href="https://www.amazon.fr/mage-du-Kremlin-Giuliano-Empoli/dp/2072958164/ref=d_msx_wsirn_v1_sccl_2_44/257-0666022-3977509?pd_rd_w=r0fIB&content-id=amzn1.sym.a1965795-09f3-4ed4-b0c1-5fdecd0f37af&pf_rd_p=a1965795-09f3-4ed4-b0c1-5fdecd0f37af&pf_rd_r=6BNTBRR34JR70BZKQPKB&pd_rd_wg=o0vRB&pd_rd_r=8b1f393e-e24f-4148-a716-e1e723a7aff1&pd_rd_i=2072958164&psc=1" target="_blank"> <img
+          src="https://m.media-amazon.com/images/I/61sGjf4h++L.jpg" alt="Le mage du Kremlin" class="books" /></a>
       <figcaption>
-        Renee Paquette
+        Giuliano Da Empoli
       </figcaption>
       <figcaption>
-        Messy In The Kitchen
+        Le mage du Kremlin
       </figcaption>
       <figcaption>
-        23,56€
+        20,00€
       </figcaption>
-    </figure>-->
+    </figure>
 
-    <!--Livre 100
+    <!--Livre 100-->
     <figure>
-      <a href="https://www.amazon.fr/grand-livre-boxe-Jean-Philippe-Lustyk/dp/2501147480/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=jean+philippe+lustyk&qid=1628339153&sr=8-1" target="_blank"> <img
-          src="https://images-na.ssl-images-amazon.com/images/I/71RMGDC-AXL.jpg" alt="Le grand livre de la boxe" class="books" /></a>
+      <a href="https://www.amazon.fr/Sulak-Philippe-Jaenada/dp/2757843400/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=1668301037&sr=8-1" target="_blank"> <img
+          src="https://m.media-amazon.com/images/I/71pNQb1wJjL.jpg" alt="Sulak" class="books" /></a>
       <figcaption>
-        Jean-Phillipe Lustyk
+        Philippe Jaenada
       </figcaption>
       <figcaption>
-        Le grand livre de la boxe
+        Sulak
       </figcaption>
       <figcaption>
-        35,00€
+        8,70€
       </figcaption>
-    </figure>-->
+    </figure>
   </div>
 
   <div class="booksLine">
-    <!--Livre 97
+    <!--Livre 97-->
     <figure>
-      <a href="https://www.amazon.fr/Derri%C3%A8re-porte-verte-Bernard-LIONS/dp/226317463X/ref=msx_wsirn_v1_3?pd_rd_w=KBmBG&pf_rd_p=0a0d9834-bf34-40cf-870c-8760e04a32b7&pf_rd_r=TJ8W0C94D8VJAWGRRDJG&pd_rd_r=2ed4b53a-8dcb-44b2-ae20-3379c41da5fa&pd_rd_wg=1AeVK&pd_rd_i=226317463X&psc=1"
-        target="_blank"> <img src="https://www.amazon.fr/images/I/41by02c4o7L.jpg" alt="Derrière la porte verte" class="books" /></a>
+      <a href="https://www.amazon.fr/Friends-amours-cette-chose-terrible/dp/2749950996/ref=sr_1_1?keywords=matthew+perry&qid=1668301048&qu=eyJxc2MiOiIyLjIzIiwicXNhIjoiMS42MiIsInFzcCI6IjEuNTgifQ%3D%3D&sprefix=matthe%2Caps%2C81&sr=8-1"
+        target="_blank"> <img src="https://m.media-amazon.com/images/I/61MrdGJmqHL.jpg" alt="Matthew Perry" class="books" /></a>
       <figcaption>
-        Bernard Lions
+        Matthew Perry
       </figcaption>
       <figcaption>
-        Derrière la porte verte
+        Friends, mes amours et cette chose terrible
       </figcaption>
       <figcaption>
-        17,90€
+        et cette chose terrible
       </figcaption>
-    </figure>-->
+      <figcaption>
+        20,95€
+      </figcaption>
+    </figure>
 
-    <!--Livre 98
+    <!--Livre 98-->
     <figure>
-      <a href="https://www.amazon.fr/vie-continue-Bernard-Pivot/dp/2226451323/ref=msx_wsirn_v1_2?pd_rd_w=KBmBG&pf_rd_p=0a0d9834-bf34-40cf-870c-8760e04a32b7&pf_rd_r=TJ8W0C94D8VJAWGRRDJG&pd_rd_r=2ed4b53a-8dcb-44b2-ae20-3379c41da5fa&pd_rd_wg=1AeVK&pd_rd_i=2226451323&psc=1"
-        target="_blank"> <img src="https://www.amazon.fr/images/I/71RcLpRTVaL.jpg" alt="... Mais la vie continue" class="books" /></a>
+      <a href="https://www.amazon.fr/Seul-lespoir-apaise-douleur-Simone/dp/2080415271/ref=sr_1_1?crid=21VMITNFGQ5SH&keywords=seul+l%27espoir+apaise+la+douleur&qid=1668301065&qu=eyJxc2MiOiIwLjAwIiwicXNhIjoiMC4wMCIsInFzcCI6IjAuMDAifQ%3D%3D&sprefix=seul+l%27esp%2Caps%2C73&sr=8-1"
+        target="_blank"> <img src="https://m.media-amazon.com/images/I/61mFuikXQ8L.jpg" alt="Seul l'espoir apaise la douleur" class="books" /></a>
       <figcaption>
-        Bernard Pivot
+        Simone Veil
       </figcaption>
       <figcaption>
-        ... Mais la vie continue
+        Seul l'espoir apaise la douleur
       </figcaption>
       <figcaption>
-        19,90€
+        19,00€
       </figcaption>
-    </figure>-->
+    </figure>
 
-    <!--Livre 99
+    <!--Livre 99-->
     <figure>
-      <a href="https://www.amazon.fr/Messy-Kitchen-Deliciously-Fabulously-Copiously/dp/1682619389/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=renee+paquette&qid=1623591705&sr=8-1" target="_blank"> <img
-          src="https://images-na.ssl-images-amazon.com/images/I/81d-hgRC2eL.jpg" alt="Renee Paquette cuisine" class="books" /></a>
+      <a href="https://www.amazon.fr/12-r%C3%A8gles-pour-une-vie/dp/2290203130/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=1668301092&sr=8-1" target="_blank"> <img
+          src="https://m.media-amazon.com/images/I/51ucukOawNL.jpg" alt="12 règles pour une vie" class="books" /></a>
       <figcaption>
-        Renee Paquette
+        Jordan B. Peterson
       </figcaption>
       <figcaption>
-        Messy In The Kitchen
+        12 règles pour une vie
       </figcaption>
       <figcaption>
-        23,56€
+        8,80€
       </figcaption>
-    </figure>-->
+      <figcaption>
+        Livre 1 de 2
+      </figcaption>
+    </figure>
 
-    <!--Livre 100
+    <!--Livre 100-->
     <figure>
-      <a href="https://www.amazon.fr/grand-livre-boxe-Jean-Philippe-Lustyk/dp/2501147480/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=jean+philippe+lustyk&qid=1628339153&sr=8-1" target="_blank"> <img
-          src="https://images-na.ssl-images-amazon.com/images/I/71RMGDC-AXL.jpg" alt="Le grand livre de la boxe" class="books" /></a>
+      <a href="https://www.amazon.fr/Au-del%C3%A0-simple-ordre-Jordan-Peterson/dp/2749944872/ref=sr_1_3?keywords=jordan+b+peterson&qid=1668301092&qu=eyJxc2MiOiIyLjkzIiwicXNhIjoiMi43NiIsInFzcCI6IjIuNzcifQ%3D%3D&sprefix=jordan+b+pe%2Caps%2C82&sr=8-3" target="_blank"> <img
+          src="https://m.media-amazon.com/images/I/61LWT3CvmxL.jpg" alt="12 règles pour une vie" class="books" /></a>
       <figcaption>
-        Jean-Phillipe Lustyk
+        Jordan B. Peterson
       </figcaption>
       <figcaption>
-        Le grand livre de la boxe
+        12 nouvelles règles pour une vie au-delà de l'ordre
       </figcaption>
       <figcaption>
-        35,00€
+        vie au-delà de l'ordre
       </figcaption>
-    </figure>-->
+      <figcaption>
+        19,95€
+      </figcaption>
+      <figcaption>
+        Livre 2 de 2
+      </figcaption>
+    </figure>
   </div>
 
   <div class="booksLine">
