--- a/autres.html
+++ b/autres.html
@@ -45,32 +45,48 @@
       </figcaption>
     </figure>
 
-    <!--Autres 3
+    <!--Autres 3-->
     <figure>
-      <a href="https://www.amazon.fr/Chernobyl-Blu-Ray-Jared-Harris/dp/B07SZGSXT3?pf_rd_p=eab93c21-6a33-4780-aa56-35c8fe5fc951&pd_rd_wg=srzCG&pf_rd_r=JRY7AN681R6AYFAFNDXQ&ref_=pd_gw_cr_simh&pd_rd_w=xJ0th&pd_rd_r=298834d5-8235-4e45-8dcb-0eda62497f72"
-        target="_blank"> <img src="https://www.amazon.fr/images/I/51NHFmY-YcS._AC_SL1000_.jpg" alt="Intégrale Chernobyl" class="others" /></a>
+      <a href="https://fnatic.com/products/pro-player-sleeve"
+        target="_blank"> <img src="https://cf-img.fnatic.com/cdn-cgi/image/dpr=1,fit=contain,format=auto,height=3839,width=1536/https://cdn.sanity.io/images/5gii1snx/production/48e9862270ff20e01b3c83d6e1c561d86f09c6f7-5119x3839.jpg" alt="Sleeve Fnatic" class="others" /></a>
       <figcaption>
-        Intégrale Chernobyl
+        Manches gaming Fnatic
       </figcaption>
       <figcaption>
-        Blu Ray
+        24,99€
       </figcaption>
       <figcaption>
-        22,50€
+        Payement par Paypal
       </figcaption>
-    </figure>-->
+      <figcaption>
+        En cas de commande du bundee (article en dessous),
+      </figcaption>
+      <figcaption>
+        commander les deux ensemble permet d'éviter
+      </figcaption>
+      <figcaption>
+        2x les frais de livraison
+      </figcaption>
+    </figure>
 
-    <!--Autres 4
+    <!--Autres 4-->
     <figure>
-      <a href="https://www.amazon.fr/PlayStation-officielle-DualSense-rechargeable-Compatible/dp/B08H99BPJN/ref=pd_vtp_2/257-9479405-0879257?pd_rd_w=x9oiX&pf_rd_p=ae9723b3-1b9c-43b5-84ad-70af60d95378&pf_rd_r=0MKVP2P2297EBGMKPQ1B&pd_rd_r=de36e16f-0c13-4c40-9650-912e6f5c7ad9&pd_rd_wg=LpinP&pd_rd_i=B08H99BPJN&psc=1"
-        target="_blank"> <img src="https://m.media-amazon.com/images/I/71lPDuOqgKL._AC_SL1500_.jpg" alt="Manette" class="others" /></a>
+      <a href="https://fnatic.com/products/fnatic-mouse-bungee"
+        target="_blank"> <img src="https://cf-img.fnatic.com/cdn-cgi/image/dpr=1,fit=contain,format=auto,height=1500,width=1536/https://cdn.sanity.io/images/5gii1snx/production/c17585e3cd231092750ec398cf0983fbe04679b5-2000x1500.png" alt="Bungee" class="others" /></a>
       <figcaption>
-        Manette PS5
+        Bungee Fnatic
       </figcaption>
       <figcaption>
-        69,13€
+        19,99€
       </figcaption>
-    </figure>-->
+    </figcaption>
+    <figcaption>
+      Payement par Paypal
+    </figcaption>
+    <figcaption>
+      Voir article précédent
+    </figcaption>
+    </figure>
   </div>
 
   <div class="othersLine">
