--- a/livres.html
+++ b/livres.html
@@ -5456,97 +5456,97 @@
   </div>
 
   <div class="booksLine">
-    <!--Livre 97
+    <!--Livre 97-->
     <figure>
-      <a href="https://www.amazon.fr/Derri%C3%A8re-porte-verte-Bernard-LIONS/dp/226317463X/ref=msx_wsirn_v1_3?pd_rd_w=KBmBG&pf_rd_p=0a0d9834-bf34-40cf-870c-8760e04a32b7&pf_rd_r=TJ8W0C94D8VJAWGRRDJG&pd_rd_r=2ed4b53a-8dcb-44b2-ae20-3379c41da5fa&pd_rd_wg=1AeVK&pd_rd_i=226317463X&psc=1"
-        target="_blank"> <img src="https://www.amazon.fr/images/I/41by02c4o7L.jpg" alt="Derrière la porte verte" class="books" /></a>
+      <a href="https://www.amazon.fr/Faites-entrer-lacquitt%C3%A9-quelques-criminels/dp/2221263243/ref=sr_1_1?keywords=faites+entrer+l%27acquitt%C3%A9&qid=1669079428&qu=eyJxc2MiOiIwLjAwIiwicXNhIjoiMC4wMCIsInFzcCI6IjAuMDAifQ%3D%3D&s=books&sprefix=faites+entrer%2Cstripbooks%2C70&sr=1-1"
+        target="_blank"> <img src="https://m.media-amazon.com/images/I/71Wf80sRp0L.jpg" alt="Faites entrer l'acquitté" class="books" /></a>
       <figcaption>
-        Bernard Lions
+        Gilbert Thiel
       </figcaption>
       <figcaption>
-        Derrière la porte verte
+        Faites entrer l'acquitté
       </figcaption>
       <figcaption>
-        17,90€
+        22,00€
       </figcaption>
-    </figure>-->
+    </figure>
 
-    <!--Livre 98
+    <!--Livre 98-->
     <figure>
-      <a href="https://www.amazon.fr/vie-continue-Bernard-Pivot/dp/2226451323/ref=msx_wsirn_v1_2?pd_rd_w=KBmBG&pf_rd_p=0a0d9834-bf34-40cf-870c-8760e04a32b7&pf_rd_r=TJ8W0C94D8VJAWGRRDJG&pd_rd_r=2ed4b53a-8dcb-44b2-ae20-3379c41da5fa&pd_rd_wg=1AeVK&pd_rd_i=2226451323&psc=1"
-        target="_blank"> <img src="https://www.amazon.fr/images/I/71RcLpRTVaL.jpg" alt="... Mais la vie continue" class="books" /></a>
+      <a href="https://www.amazon.fr/Performance-Prix-Renaudot-Simon-Liberati/dp/224682267X/ref=d_msx_wsirn_v1_sccl_2_3/257-0666022-3977509?pd_rd_w=nbx38&content-id=amzn1.sym.a1965795-09f3-4ed4-b0c1-5fdecd0f37af&pf_rd_p=a1965795-09f3-4ed4-b0c1-5fdecd0f37af&pf_rd_r=R3CWZF4PP6CT5JWEZ6TT&pd_rd_wg=ZxAAW&pd_rd_r=0276e8c5-3787-411d-b020-5b5913eec5ad&pd_rd_i=224682267X&psc=1"
+        target="_blank"> <img src="https://m.media-amazon.com/images/I/51Chq4iDkWL.jpg" alt="Performance" class="books" /></a>
       <figcaption>
-        Bernard Pivot
+        Simon Liberati
       </figcaption>
       <figcaption>
-        ... Mais la vie continue
+        Performance
       </figcaption>
       <figcaption>
-        19,90€
+        20,00€
       </figcaption>
-    </figure>-->
+    </figure>
 
-    <!--Livre 99
+    <!--Livre 99-->
     <figure>
-      <a href="https://www.amazon.fr/Messy-Kitchen-Deliciously-Fabulously-Copiously/dp/1682619389/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=renee+paquette&qid=1623591705&sr=8-1" target="_blank"> <img
-          src="https://images-na.ssl-images-amazon.com/images/I/81d-hgRC2eL.jpg" alt="Renee Paquette cuisine" class="books" /></a>
+      <a href="https://www.amazon.fr/Muse-Rouge-Prix-Quai-Orf%C3%A8vres/dp/2213721327/ref=d_msx_wsirn_v1_sccl_2_16/257-0666022-3977509?pd_rd_w=nbx38&content-id=amzn1.sym.a1965795-09f3-4ed4-b0c1-5fdecd0f37af&pf_rd_p=a1965795-09f3-4ed4-b0c1-5fdecd0f37af&pf_rd_r=R3CWZF4PP6CT5JWEZ6TT&pd_rd_wg=ZxAAW&pd_rd_r=0276e8c5-3787-411d-b020-5b5913eec5ad&pd_rd_i=2213721327&psc=1" target="_blank"> <img
+          src="https://m.media-amazon.com/images/I/81b7v0g1FML.jpg" alt="  La Muse Rouge" class="books" /></a>
       <figcaption>
-        Renee Paquette
+        Véronique de Haas
       </figcaption>
       <figcaption>
-        Messy In The Kitchen
+        La Muse Rouge
       </figcaption>
       <figcaption>
-        23,56€
+        8,90€
       </figcaption>
-    </figure>-->
+    </figure>
 
-    <!--Livre 100
+    <!--Livre 100-->
     <figure>
-      <a href="https://www.amazon.fr/grand-livre-boxe-Jean-Philippe-Lustyk/dp/2501147480/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=jean+philippe+lustyk&qid=1628339153&sr=8-1" target="_blank"> <img
-          src="https://images-na.ssl-images-amazon.com/images/I/71RMGDC-AXL.jpg" alt="Le grand livre de la boxe" class="books" /></a>
+      <a href="https://www.amazon.fr/Fils-personne-Prix-Quai-Orf%C3%A8vres/dp/2213725101/ref=d_msx_wsirn_v1_sccl_2_18/257-0666022-3977509?pd_rd_w=nbx38&content-id=amzn1.sym.a1965795-09f3-4ed4-b0c1-5fdecd0f37af&pf_rd_p=a1965795-09f3-4ed4-b0c1-5fdecd0f37af&pf_rd_r=R3CWZF4PP6CT5JWEZ6TT&pd_rd_wg=ZxAAW&pd_rd_r=0276e8c5-3787-411d-b020-5b5913eec5ad&pd_rd_i=2213725101&psc=1" target="_blank"> <img
+          src="https://m.media-amazon.com/images/I/81xvzLNPpUL.jpg" alt="Fils de personne" class="books" /></a>
       <figcaption>
-        Jean-Phillipe Lustyk
+         Jean-François Pasques
       </figcaption>
       <figcaption>
-        Le grand livre de la boxe
+        Fils de personne
       </figcaption>
       <figcaption>
-        35,00€
+        8,90€
       </figcaption>
-    </figure>-->
+    </figure>
   </div>
 
   <div class="booksLine">
-    <!--Livre 97
+    <!--Livre 97-->
     <figure>
-      <a href="https://www.amazon.fr/Derri%C3%A8re-porte-verte-Bernard-LIONS/dp/226317463X/ref=msx_wsirn_v1_3?pd_rd_w=KBmBG&pf_rd_p=0a0d9834-bf34-40cf-870c-8760e04a32b7&pf_rd_r=TJ8W0C94D8VJAWGRRDJG&pd_rd_r=2ed4b53a-8dcb-44b2-ae20-3379c41da5fa&pd_rd_wg=1AeVK&pd_rd_i=226317463X&psc=1"
-        target="_blank"> <img src="https://www.amazon.fr/images/I/41by02c4o7L.jpg" alt="Derrière la porte verte" class="books" /></a>
+      <a href="https://www.amazon.fr/tueurs-R%C3%A9publique-Assassinats-op%C3%A9rations-sp%C3%A9ciales/dp/2290372846/ref=d_msx_wsirn_v1_sccl_2_98/257-0666022-3977509?pd_rd_w=nbx38&content-id=amzn1.sym.a1965795-09f3-4ed4-b0c1-5fdecd0f37af&pf_rd_p=a1965795-09f3-4ed4-b0c1-5fdecd0f37af&pf_rd_r=R3CWZF4PP6CT5JWEZ6TT&pd_rd_wg=ZxAAW&pd_rd_r=0276e8c5-3787-411d-b020-5b5913eec5ad&pd_rd_i=2290372846&psc=1"
+        target="_blank"> <img src="https://m.media-amazon.com/images/I/61utI1dUIsL.jpg" alt="Les tueurs de la République" class="books" /></a>
       <figcaption>
-        Bernard Lions
+        Vincent Nouzille
       </figcaption>
       <figcaption>
-        Derrière la porte verte
+        Les tueurs de la République
       </figcaption>
       <figcaption>
-        17,90€
+        9,80€
       </figcaption>
-    </figure>-->
+    </figure>
 
-    <!--Livre 98
+    <!--Livre 98-->
     <figure>
-      <a href="https://www.amazon.fr/vie-continue-Bernard-Pivot/dp/2226451323/ref=msx_wsirn_v1_2?pd_rd_w=KBmBG&pf_rd_p=0a0d9834-bf34-40cf-870c-8760e04a32b7&pf_rd_r=TJ8W0C94D8VJAWGRRDJG&pd_rd_r=2ed4b53a-8dcb-44b2-ae20-3379c41da5fa&pd_rd_wg=1AeVK&pd_rd_i=2226451323&psc=1"
-        target="_blank"> <img src="https://www.amazon.fr/images/I/71RcLpRTVaL.jpg" alt="... Mais la vie continue" class="books" /></a>
+      <a href="https://www.amazon.fr/Num%C3%A9ro-Deux-David-Foenkinos/dp/2072959020/ref=sr_1_2?keywords=numero+deux+foenkinos&qid=1669079656&qu=eyJxc2MiOiIxLjg3IiwicXNhIjoiMS42MiIsInFzcCI6IjEuMzgifQ%3D%3D&s=books&sprefix=numero+d%2Cstripbooks%2C69&sr=1-2"
+        target="_blank"> <img src="https://m.media-amazon.com/images/I/71Kg3n+C9GL.jpg" alt="Numéro Deux" class="books" /></a>
       <figcaption>
-        Bernard Pivot
+        David Foenkinos
       </figcaption>
       <figcaption>
-        ... Mais la vie continue
+        Numéro Deux
       </figcaption>
       <figcaption>
-        19,90€
+        19,50€
       </figcaption>
-    </figure>-->
+    </figure>
 
     <!--Livre 99
     <figure>
