--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
   </div>
 
   <p class="dateMAJ">
-    Mise à jour liste le 25 décembre 2019
+    Mise à jour liste le 22 novembre 2022
   </p>
   <p class="dateMAJ2">
-    Mise à jour prix le 23 novembre 2019
+    Mise à jour prix le 22 juillet 2022
   </p>
 
 </body>
