--- a/jeuxvideo.html
+++ b/jeuxvideo.html
@@ -21,30 +21,30 @@
   </navbar>
 
   <div class="gamesLine">
+
     <!--Jeu 1-->
     <figure>
-      <a href="https://www.amazon.fr/Star-Wars-Jedi-Fallen-Order/dp/B07QN7HVMH/ref=sr_1_12?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=6PRCMHAUXCC&keywords=jedi+fallen+order&qid=1574032856&sprefix=jedi+fallen+o%2Caps%2C148&sr=8-12"
-        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71Xz9rNV5HL._SL1245_.jpg" alt="Fallen Order" class="game" /></a>
+      <a href="https://www.amazon.fr/Nintendo-Pok%C3%A9mon-Violet/dp/B0B31X6NKB/ref=sr_1_1?keywords=pokemon+violet&qid=1669078461&qu=eyJxc2MiOiIxLjY3IiwicXNhIjoiMC44NCIsInFzcCI6IjAuNDIifQ%3D%3D&sprefix=pokem%2Caps%2C74&sr=8-1" target="_blank"> <img src="https://m.media-amazon.com/images/I/81L-iUOp5BL._AC_SL1500_.jpg" alt="Pokemon violet" class="game" /></a>
       <figcaption>
-        Star Wars Jedi : Fallen Order
+        Pokemon violet
       </figcaption>
       <figcaption>
-        66,11€
+        44,16€
       </figcaption>
     </figure>
 
     <!--Jeu 2
     <figure>
-      <a href="https://www.amazon.fr/Sony-MediEvil-PS4/dp/B07S31PDMW/ref=pd_sbs_63_10?_encoding=UTF8&pd_rd_i=B07S31PDMW&pd_rd_r=3b0e3e96-e177-435b-82b2-68912482730c&pd_rd_w=Ynh5I&pd_rd_wg=wBDIQ&pf_rd_p=26d54ac2-ee81-4c62-8302-1e18ced12245&pf_rd_r=F6VSN7G9329B1EM9A27K&psc=1&refRID=F6VSN7G9329B1EM9A27K" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81nVKa-ZJ4L._SL1500_.jpg" alt="Medievil" class="game" /></a>
+      <a href="https://www.amazon.fr/MarvelS-Guardians-Galaxy-PlayStation-5/dp/B0977PRVPM/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=2GMFYLQ2OL6OC&keywords=gardiens+de+la+galaxie+ps5&qid=1648822126&sprefix=gardiens+de+la+galaxie+ps5%2Caps%2C67&sr=8-1" target="_blank"> <img src="https://m.media-amazon.com/images/I/71zjYjmnF7L._AC_SL1000_.jpg" alt="Gardiens de la Galaxie" class="game" /></a>
       <figcaption>
-        Medievil
+        Gardiens de la Galaxie
       </figcaption>
       <figcaption>
-        24,99€
+        50,11€
       </figcaption>
     </figure>-->
 
-    <!--Jeu 3-->
+    <!--Jeu 3
     <figure>
       <a href="https://www.amazon.fr/Nintendo-1014265-Mario-Kart-Deluxe/dp/B01N1081RO/ref=pd_sim_63_10?_encoding=UTF8&pd_rd_i=B01N1081RO&pd_rd_r=0628726c-cc8b-4a47-8bf6-850d5c0d241c&pd_rd_w=G1Xo9&pd_rd_wg=Ecbfq&pf_rd_p=79de6a4a-b21a-4694-99e3-cde9267231ac&pf_rd_r=NEV47M1RK88HJGD04JFG&psc=1&refRID=NEV47M1RK88HJGD04JFG"
         target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91BphPXVYVL._SL1500_.jpg" alt="Mario Kart" class="game" /></a>
@@ -54,9 +54,9 @@
       <figcaption>
         49,99€ sur Amazon
       </figcaption>
-    </figure>
+    </figure>-->
 
-    <!--Jeu 4-->
+    <!--Jeu 4
     <figure>
       <a href="https://www.amazon.fr/Legend-Zelda-Links-Awakening/dp/B07QZFLVM7/ref=pd_sim_63_11?_encoding=UTF8&pd_rd_i=B07QZFLVM7&pd_rd_r=0628726c-cc8b-4a47-8bf6-850d5c0d241c&pd_rd_w=G1Xo9&pd_rd_wg=Ecbfq&pf_rd_p=79de6a4a-b21a-4694-99e3-cde9267231ac&pf_rd_r=NEV47M1RK88HJGD04JFG&psc=1&refRID=NEV47M1RK88HJGD04JFG"
         target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91DFZJlRAsL._SL1500_.jpg" alt="Zelda" class="game" /></a>
@@ -66,11 +66,11 @@
       <figcaption>
         44,49€ sur Amazon
       </figcaption>
-    </figure>
+    </figure>-->
   </div>
 
   <div class="gamesLine">
-    <!--Jeu 5-->
+    <!--Jeu 5
     <figure>
       <a href="https://www.amazon.fr/Nintendo-0045496420888-Super-Mario-Odyssey/dp/B072KJWYL9/ref=pd_sim_63_8?_encoding=UTF8&pd_rd_i=B072KJWYL9&pd_rd_r=faba7ffe-f309-4f16-9853-9816416fa012&pd_rd_w=w36ZL&pd_rd_wg=h1L5Z&pf_rd_p=79de6a4a-b21a-4694-99e3-cde9267231ac&pf_rd_r=C8DP4MVYDHMZ7AK23MT4&psc=1&refRID=C8DP4MVYDHMZ7AK23MT4"
         target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71YHciwZNAL._SL1000_.jpg" alt="Super Mario" class="game" /></a>
@@ -80,9 +80,9 @@
       <figcaption>
         44,49€
       </figcaption>
-    </figure>
+    </figure>-->
 
-    <!--Jeu 6-->
+    <!--Jeu 6
     <figure>
       <a href="https://www.amazon.fr/Nintendo-Super-Smash-Bros-Ultimate/dp/B07DPQD26J/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=2A8N9OZP36T2M&keywords=smash+bros+ultimate&qid=1574113818&s=videogames&sprefix=smash%2Cvideogames%2C140&sr=1-1"
         target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81nTBvXpItL._SL1339_.jpg" alt="Smash Bros" class="game" /></a>
@@ -92,19 +92,19 @@
       <figcaption>
         49,00€ sur Amazon
       </figcaption>
-    </figure>
+    </figure>-->
 
-    <!--Jeu 7-->
+    <!--Jeu 7
     <figure>
       <a href="https://www.amazon.fr/Nintendo-0045496423124-Pok%C3%A9mon-Lets-Pikachu/dp/B07DF4HGBY/ref=pd_sim_63_7?_encoding=UTF8&pd_rd_i=B07DF4HGBY&pd_rd_r=0628726c-cc8b-4a47-8bf6-850d5c0d241c&pd_rd_w=G1Xo9&pd_rd_wg=Ecbfq&pf_rd_p=79de6a4a-b21a-4694-99e3-cde9267231ac&pf_rd_r=NEV47M1RK88HJGD04JFG&refRID=NEV47M1RK88HJGD04JFG&th=1"
         target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81liPjEvyDL._SL1500_.jpg" alt="Let's Go" class="game" /></a>
       <figcaption>
-        Pokémon : Let's Go, Pikachu
+        Pokémon : Let's Go, Pikachu!
       </figcaption>
       <figcaption>
         46,99€ sur Amazon
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Jeu 8
     <figure>
