--- a/autres.html
+++ b/autres.html
@@ -90,29 +90,35 @@
   </div>
 
   <div class="othersLine">
-    <!--Autres 5
+    <!--Autres 5-->
     <figure>
-      <a href="https://shop.gotaga.tv/accessoires/57-mug-gotaga.html"
-        target="_blank"> <img src="https://shop.gotaga.tv/751-large_default/mug-gotaga.jpg" alt="Mug Gotaga" class="others" /></a>
+      <a href="https://displate.com/displate/5681646"
+        target="_blank"> <img src="https://i.gyazo.com/99b824edfea935ecd75111123aa25dc7.png" alt="Displate Liquid" class="others" /></a>
       <figcaption>
-        Mug Gotaga
+        Dispalte Let's go Liquid
       </figcaption>
       <figcaption>
-        20,00€
+        39€
       </figcaption>
-    </figure>-->
+      <figcaption>
+        -15% avec utilisation du code HARMII à la commande
+      </figcaption>
+    </figure>
 
-    <!--Autres 6
+    <!--Autres 6-->
     <figure>
-      <a href="https://shop.gotaga.tv/accessoires/60-tumbler-list.html" target="_blank"> <img src="https://shop.gotaga.tv/763-large_default/tumbler-list.jpg"
-          alt="Tumbler Gotaga" class="others" /></a>
+      <a href="https://displate.com/displate/2360472"
+        target="_blank"> <img src="https://gyazo.com/edbec6e054d6cb5a6d14a738c436919a" alt="Displate Savastano" class="others" /></a>
       <figcaption>
-        Tumbler Gotaga
+        Dispalte Gennaro Savastano
       </figcaption>
       <figcaption>
-        20,00€
+        39€
       </figcaption>
-    </figure>-->
+      <figcaption>
+        -15% avec utilisation du code HARMII à la commande
+      </figcaption>
+    </figure>
 
     <!--Autres 7
     <figure>
