--- a/autres.html
+++ b/autres.html
@@ -108,7 +108,7 @@
     <!--Autres 6-->
     <figure>
       <a href="https://displate.com/displate/2360472"
-        target="_blank"> <img src="https://gyazo.com/edbec6e054d6cb5a6d14a738c436919a" alt="Displate Savastano" class="others" /></a>
+        target="_blank"> <img src="https://i.gyazo.com/edbec6e054d6cb5a6d14a738c436919a.png" alt="Displate Savastano" class="others" /></a>
       <figcaption>
         Dispalte Gennaro Savastano
       </figcaption>
