--- a/autres.html
+++ b/autres.html
@@ -90,7 +90,7 @@
   </div>
 
   <div class="othersLine">
-    <!--Autres 5-->
+    <!--Autres 5
     <figure>
       <a href="https://displate.com/displate/5681646"
         target="_blank"> <img src="https://i.gyazo.com/e47cce6472cbb0e0f442dfe2828cc5f2.png" alt="Displate Liquid" class="others" /></a>
@@ -103,9 +103,9 @@
       <figcaption>
         -15% avec utilisation du code HARMII à la commande
       </figcaption>
-    </figure>
+    </figure>-->
 
-    <!--Autres 6-->
+    <!--Autres 6
     <figure>
       <a href="https://displate.com/displate/2360472"
         target="_blank"> <img src="https://i.gyazo.com/403abcd3bb77ad5ee21a61c754bf93d8.png" alt="Displate Savastano" class="others" /></a>
@@ -118,7 +118,7 @@
       <figcaption>
         -15% avec utilisation du code HARMII à la commande
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Autres 7
     <figure>
