--- a/autres.html
+++ b/autres.html
@@ -35,13 +35,13 @@
 
     <!--Autres 2-->
     <figure>
-      <a href="https://www.amazon.fr/After-Foot-Qatar-quoi-co%C3%BBte/dp/2492740064/ref=sr_1_1?crid=1NVFQOT8R1FCF&keywords=after+foot+la+revue&qid=1668301335&qu=eyJxc2MiOiIyLjcwIiwicXNhIjoiMi42MyIsInFzcCI6IjIuNjQifQ%3D%3D&sprefix=after+f%2Caps%2C79&sr=8-1" target="_blank"> <img
-          src="https://m.media-amazon.com/images/I/61kQQvJPjnL.jpg" alt="After Foot - N° 7" class="others" /></a>
+      <a href="https://boutiquepopcorn.fr/collections/tous-les-produits/products/mug-popcorn" target="_blank"> <img
+          src="https://cdn.shopify.com/s/files/1/0328/2708/0840/products/MugBlanc_480x.jpg?v=1666079664" alt="Mug Popcorn" class="others" /></a>
       <figcaption>
-        After Foot : la revue n° 7
+        Mug Popcorn
       </figcaption>
       <figcaption>
-        13,90€
+        14,94€
       </figcaption>
     </figure>
 
@@ -90,35 +90,29 @@
   </div>
 
   <div class="othersLine">
-    <!--Autres 5
+    <!--Autres 5-->
     <figure>
-      <a href="https://displate.com/displate/5681646"
-        target="_blank"> <img src="https://i.gyazo.com/e47cce6472cbb0e0f442dfe2828cc5f2.png" alt="Displate Liquid" class="others" /></a>
+      <a href="https://boutiquepopcorn.fr/collections/tous-les-produits/products/gourde-en-bambou-popcorn"
+        target="_blank"> <img src="https://cdn.shopify.com/s/files/1/0328/2708/0840/products/GourdePopcorn_480x.jpg?v=1665482120" alt="Gourde Popcorn" class="others" /></a>
       <figcaption>
-        Dispalte Let's go Liquid
+        Gourde Popcorn
       </figcaption>
       <figcaption>
-        39€
+        19,94€
       </figcaption>
-      <figcaption>
-        -15% avec utilisation du code HARMII à la commande
-      </figcaption>
-    </figure>-->
+    </figure>
 
-    <!--Autres 6
+    <!--Autres 6-->
     <figure>
-      <a href="https://displate.com/displate/2360472"
-        target="_blank"> <img src="https://i.gyazo.com/403abcd3bb77ad5ee21a61c754bf93d8.png" alt="Displate Savastano" class="others" /></a>
+      <a href="https://www.amazon.fr/ABYstyle-FRIENDS-Central-Perk-subli/dp/B092R1YFGF/ref=sr_1_28?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=1DL25EECZWH0C&keywords=mug&qid=1669818494&qu=eyJxc2MiOiI4LjgyIiwicXNhIjoiOC41NyIsInFzcCI6IjcuOTAifQ%3D%3D&sprefix=mug%2Caps%2C70&sr=8-28"
+        target="_blank"> <img src="https://m.media-amazon.com/images/I/81GlpPB4kqL._AC_SL1500_.jpg" alt="Mug Friends" class="others" /></a>
       <figcaption>
-        Dispalte Gennaro Savastano
+        Mug Friends
       </figcaption>
       <figcaption>
-        39€
+        9,99€
       </figcaption>
-      <figcaption>
-        -15% avec utilisation du code HARMII à la commande
-      </figcaption>
-    </figure>-->
+    </figure>
 
     <!--Autres 7
     <figure>
