--- a/livres.html
+++ b/livres.html
@@ -5548,20 +5548,20 @@
       </figcaption>
     </figure>
 
-    <!--Livre 99
+    <!--Livre 99-->
     <figure>
-      <a href="https://www.amazon.fr/Messy-Kitchen-Deliciously-Fabulously-Copiously/dp/1682619389/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=renee+paquette&qid=1623591705&sr=8-1" target="_blank"> <img
-          src="https://images-na.ssl-images-amazon.com/images/I/81d-hgRC2eL.jpg" alt="Renee Paquette cuisine" class="books" /></a>
+      <a href="https://www.amazon.fr/Mangez-vous-voulez-Jean-TEUL%C3%89/dp/226001772X/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1669746407&sr=8-1" target="_blank"> <img
+          src="https://m.media-amazon.com/images/I/71LZ60oEMRL.jpg" alt="Mangez-le si vous voulez" class="books" /></a>
       <figcaption>
-        Renee Paquette
+        Jean Teulé
       </figcaption>
       <figcaption>
-        Messy In The Kitchen
+        Mangez-le si vous voulez
       </figcaption>
       <figcaption>
-        23,56€
+        17,50€
       </figcaption>
-    </figure>-->
+    </figure>
 
     <!--Livre 100
     <figure>
