--- a/autres.html
+++ b/autres.html
@@ -102,7 +102,7 @@
       </figcaption>
     </figure>
 
-    <!--Autres 6-->
+    <!--Autres 6
     <figure>
       <a href="https://www.amazon.fr/ABYstyle-FRIENDS-Central-Perk-subli/dp/B092R1YFGF/ref=sr_1_28?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=1DL25EECZWH0C&keywords=mug&qid=1669818494&qu=eyJxc2MiOiI4LjgyIiwicXNhIjoiOC41NyIsInFzcCI6IjcuOTAifQ%3D%3D&sprefix=mug%2Caps%2C70&sr=8-28"
         target="_blank"> <img src="https://m.media-amazon.com/images/I/81GlpPB4kqL._AC_SL1500_.jpg" alt="Mug Friends" class="others" /></a>
@@ -112,7 +112,7 @@
       <figcaption>
         9,99€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Autres 7
     <figure>
