--- a/livres.html
+++ b/livres.html
@@ -5563,20 +5563,20 @@
       </figcaption>
     </figure>
 
-    <!--Livre 100
+    <!--Livre 100-->
     <figure>
-      <a href="https://www.amazon.fr/grand-livre-boxe-Jean-Philippe-Lustyk/dp/2501147480/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=jean+philippe+lustyk&qid=1628339153&sr=8-1" target="_blank"> <img
-          src="https://images-na.ssl-images-amazon.com/images/I/71RMGDC-AXL.jpg" alt="Le grand livre de la boxe" class="books" /></a>
+      <a href="https://www.amazon.fr/Veritas-tantam-potentiam-subverti-puissance/dp/2749162602/ref=sr_1_1?keywords=livre+olivier+de+kersauson&qid=1670846144&sprefix=kersau%2Caps%2C65&sr=8-1" target="_blank"> <img
+          src="https://m.media-amazon.com/images/I/61i4N3CN9AL.jpg" alt="Veritas tantam" class="books" /></a>
       <figcaption>
-        Jean-Phillipe Lustyk
+        Olivier de Kersauson
       </figcaption>
       <figcaption>
-        Le grand livre de la boxe
+        Veritas tantam
       </figcaption>
       <figcaption>
-        35,00€
+        18,90€
       </figcaption>
-    </figure>-->
+    </figure>
   </div>
 
   <div class="booksLine">
