maj livres parrain

--- a/livres.html
+++ b/livres.html
@@ -69,7 +69,7 @@
       </figcaption>
     </figure>
 
-    <!--Livre 4-->
+    <!--Livre 4
     <figure>
       <a href="https://www.amazon.fr/Comme-une-valse-Dorothy-PARKER/dp/2264017104/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=MO3CWG3CXEVZ&keywords=dorothy+parker+comme+une+valse&qid=1656614078&sprefix=dorothy+parker+comme+une+valse%2Caps%2C53&sr=8-1" target="_blank"> <img
           src="https://images-na.ssl-images-amazon.com/images/I/61tP1Dq6TnL.jpg" alt="Comme une valse" class="books" /></a>
@@ -82,7 +82,7 @@
       <figcaption>
         7,10€
       </figcaption>
-    </figure>
+    </figure>-->
   </div>
 
   <div class="booksLine">
@@ -275,7 +275,7 @@
   </div>
 
   <div class="booksLine">
-    <!--Livre 17-->
+    <!--Livre 17
     <figure>
       <a href="https://www.amazon.fr/Xavier-Dupont-Ligonn%C3%A8s-grande-enqu%C3%AAte/dp/2501158601/ref=msx_wsirn_v1_sccl_1_1/257-9479405-0879257?pd_rd_w=hSALJ&content-id=amzn1.sym.17c4bd6e-a19d-4594-b7eb-49adc7297939&pf_rd_p=17c4bd6e-a19d-4594-b7eb-49adc7297939&pf_rd_r=6FF0WRGYQFRFQ2ZHFXJH&pd_rd_wg=ebRek&pd_rd_r=5773470b-d92a-40f0-b915-4467e0417b37&pd_rd_i=2501158601&psc=1"
         target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/810yp2et6WL.jpg" alt="Xavier Dupont de Ligonnès - La grande enquête" class="books" /></a>
@@ -288,7 +288,7 @@
       <figcaption>
         15,90€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Livre 18-->
     <figure>
@@ -453,7 +453,7 @@
       </figcaption>
     </figure>
 
-    <!--Livre 28-->
+    <!--Livre 28
     <figure>
       <a href="https://www.amazon.fr/C%C3%A9tait-bien-Jean-dOrmesson/dp/207031653X/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=1559690597&sr=8-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91r4iMCPzDL.jpg"
           alt="C'était bien" class="books" /></a>
@@ -466,7 +466,7 @@
       <figcaption>
         8,90€
       </figcaption>
-    </figure>
+    </figure>-->
   </div>
 
   <div class="booksLine">
@@ -793,7 +793,7 @@
   </div>
 
   <div class="booksLine">
-    <!-- Livre 49-->
+    <!-- Livre 49
     <figure>
       <a href="https://www.amazon.fr/Tony-Parker-Au-del%C3%A0-tous-r%C3%AAves/dp/2263163077/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=tony+parker&qid=1574517060&sr=8-1" target="_blank"> <img
           src="https://images-na.ssl-images-amazon.com/images/I/41%2BNz-fYroL.jpg" alt="Tony Parker" class="books" /></a>
@@ -806,7 +806,7 @@
       <figcaption>
         15,00€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Livre 50-->
     <figure>
@@ -3196,7 +3196,7 @@
       </figcaption>
     </figure>
 
-    <!--Livre 100-->
+    <!--Livre 100
     <figure>
       <a href="https://www.amazon.fr/Chute-maison-Usher-autres-nouvelles/dp/2369146109/ref=sr_1_2?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=1BPSN9ZFTWYKT&keywords=la+chute+de+la+maison+usher+poche&qid=1651155315&sprefix=la+chute+de+la+maison+usher+poche%2Caps%2C65&sr=8-2"
         target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/41WTHzslurL.jpg" alt="La Chute de la maison Usher" class="books" /></a>
@@ -3209,7 +3209,7 @@
       <figcaption>
         11,30€
       </figcaption>
-    </figure>
+    </figure>-->
   </div>
 
   <div class="booksLine">
@@ -3275,7 +3275,7 @@
   </div>
 
   <div class="booksLine">
-    <!--Livre 97-->
+    <!--Livre 97
     <figure>
       <a href="https://www.amazon.fr/b%C3%BBcher-vanit%C3%A9s-Tom-Wolfe/dp/2253053406/ref=sr_1_1?keywords=le+bucher+des+vanites&qid=1651195280&sprefix=le+buche%2Caps%2C66&sr=8-1" target="_blank"> <img
           src="https://images-na.ssl-images-amazon.com/images/I/71yf+420gaL.jpg" alt="Le bûcher des vanités" class="books" /></a>
@@ -3288,7 +3288,7 @@
       <figcaption>
         10,40€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Livre 98-->
     <figure>
