--- a/livres.html
+++ b/livres.html
@@ -538,7 +538,7 @@
   </div>
 
   <div class="booksLine">
-    <!--Livre 33-->
+    <!--Livre 33
     <figure>
       <a href="https://www.amazon.fr/gloire-lEmpire-Jean-dOrmesson/dp/2070389413/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=jean+d%27ormesson+la+gloire+de+l%27empire&qid=1559690652&s=gateway&sr=8-1" target="_blank"> <img
           src="https://images-na.ssl-images-amazon.com/images/I/81-7xXVpK6L.jpg" alt="La gloire de l'Empire" class="books" /></a>
@@ -551,7 +551,7 @@
       <figcaption>
         13,20€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Livre 34-->
     <figure>
