maj post christmas

--- a/autres.html
+++ b/autres.html
@@ -21,7 +21,7 @@
   </navbar>
 
   <div class="othersLine">
-    <!--Autres 1-->
+    <!--Autres 1
     <figure>
       <a href="https://www.amazon.fr/Original-Coll%C3%A8gue-Amoureux-Anniversaire-Plaisir/dp/B093FSM654/ref=sr_1_9?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=2IT6ROK2VG69G&keywords=tasse+bite+enorme&qid=1668301136&qu=eyJxc2MiOiIyLjMzIiwicXNhIjoiMC4wMCIsInFzcCI6IjAuMDAifQ%3D%3D&sprefix=tasse+bite+enorme%2Caps%2C70&sr=8-9" target="_blank"> <img
           src="https://m.media-amazon.com/images/I/51MXDb8suVL._AC_SL1000_.jpg" alt="Tasse" class="others" /></a>
@@ -31,9 +31,9 @@
       <figcaption>
         19,99€
       </figcaption>
-    </figure>
+    </figure>-->
 
-    <!--Autres 2-->
+    <!--Autres 2
     <figure>
       <a href="https://boutiquepopcorn.fr/collections/tous-les-produits/products/mug-popcorn" target="_blank"> <img
           src="https://cdn.shopify.com/s/files/1/0328/2708/0840/products/MugBlanc_480x.jpg?v=1666079664" alt="Mug Popcorn" class="others" /></a>
@@ -43,9 +43,9 @@
       <figcaption>
         14,94€
       </figcaption>
-    </figure>
+    </figure>-->
 
-    <!--Autres 3-->
+    <!--Autres 3
     <figure>
       <a href="https://fnatic.com/products/pro-player-sleeve"
         target="_blank"> <img src="https://cf-img.fnatic.com/cdn-cgi/image/dpr=1,fit=contain,format=auto,height=3839,width=1536/https://cdn.sanity.io/images/5gii1snx/production/48e9862270ff20e01b3c83d6e1c561d86f09c6f7-5119x3839.jpg" alt="Sleeve Fnatic" class="others" /></a>
@@ -67,9 +67,9 @@
       <figcaption>
         2x les frais de livraison
       </figcaption>
-    </figure>
+    </figure>-->
 
-    <!--Autres 4-->
+    <!--Autres 4
     <figure>
       <a href="https://fnatic.com/products/fnatic-mouse-bungee"
         target="_blank"> <img src="https://cf-img.fnatic.com/cdn-cgi/image/dpr=1,fit=contain,format=auto,height=1500,width=1536/https://cdn.sanity.io/images/5gii1snx/production/c17585e3cd231092750ec398cf0983fbe04679b5-2000x1500.png" alt="Bungee" class="others" /></a>
@@ -86,11 +86,11 @@
     <figcaption>
       Voir article précédent
     </figcaption>
-    </figure>
+    </figure>-->
   </div>
 
   <div class="othersLine">
-    <!--Autres 5-->
+    <!--Autres 5
     <figure>
       <a href="https://boutiquepopcorn.fr/collections/tous-les-produits/products/gourde-en-bambou-popcorn"
         target="_blank"> <img src="https://cdn.shopify.com/s/files/1/0328/2708/0840/products/GourdePopcorn_480x.jpg?v=1665482120" alt="Gourde Popcorn" class="others" /></a>
@@ -100,7 +100,7 @@
       <figcaption>
         19,94€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Autres 6
     <figure>
