--- a/jeuxvideo.html
+++ b/jeuxvideo.html
@@ -22,7 +22,7 @@
 
   <div class="gamesLine">
 
-    <!--Jeu 1-->
+    <!--Jeu 1
     <figure>
       <a href="https://www.amazon.fr/Nintendo-Pok%C3%A9mon-Violet/dp/B0B31X6NKB/ref=sr_1_1?keywords=pokemon+violet&qid=1669078461&qu=eyJxc2MiOiIxLjY3IiwicXNhIjoiMC44NCIsInFzcCI6IjAuNDIifQ%3D%3D&sprefix=pokem%2Caps%2C74&sr=8-1" target="_blank"> <img src="https://m.media-amazon.com/images/I/81L-iUOp5BL._AC_SL1500_.jpg" alt="Pokemon violet" class="game" /></a>
       <figcaption>
@@ -31,7 +31,7 @@
       <figcaption>
         44,16€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Jeu 2
     <figure>
