--- a/jeuxvideo.html
+++ b/jeuxvideo.html
@@ -22,25 +22,28 @@
 
   <div class="gamesLine">
 
-    <!--Jeu 1
+    <!--Jeu 1-->
     <figure>
-      <a href="https://www.amazon.fr/Nintendo-Pok%C3%A9mon-Violet/dp/B0B31X6NKB/ref=sr_1_1?keywords=pokemon+violet&qid=1669078461&qu=eyJxc2MiOiIxLjY3IiwicXNhIjoiMC44NCIsInFzcCI6IjAuNDIifQ%3D%3D&sprefix=pokem%2Caps%2C74&sr=8-1" target="_blank"> <img src="https://m.media-amazon.com/images/I/81L-iUOp5BL._AC_SL1500_.jpg" alt="Pokemon violet" class="game" /></a>
+      <a href="#" target="_blank"> <img src="https://image.api.playstation.com/vulcan/ap/rnd/202208/0921/dR9KJAKDW2izPbptHQbh3rnj.png" alt="Hogwarts" class="game" /></a>
       <figcaption>
-        Pokemon violet
+        Hogwarts Legacy
       </figcaption>
       <figcaption>
-        44,16€
+        84,99€ si en préco avant le 07/02
       </figcaption>
-    </figure>-->
+      <figcaption>
+        74,99€ si après le 07/02
+      </figcaption>
+    </figure>
 
     <!--Jeu 2
     <figure>
-      <a href="https://www.amazon.fr/MarvelS-Guardians-Galaxy-PlayStation-5/dp/B0977PRVPM/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=2GMFYLQ2OL6OC&keywords=gardiens+de+la+galaxie+ps5&qid=1648822126&sprefix=gardiens+de+la+galaxie+ps5%2Caps%2C67&sr=8-1" target="_blank"> <img src="https://m.media-amazon.com/images/I/71zjYjmnF7L._AC_SL1000_.jpg" alt="Gardiens de la Galaxie" class="game" /></a>
+      <a href="#" target="_blank"> <img src="https://m.media-amazon.com/images/I/71zjYjmnF7L._AC_SL1000_.jpg" alt="Dead Space" class="game" /></a>
       <figcaption>
-        Gardiens de la Galaxie
+        Dead Space
       </figcaption>
       <figcaption>
-        50,11€
+        79,99€
       </figcaption>
     </figure>-->
 
