--- a/jeuxvideo.html
+++ b/jeuxvideo.html
@@ -24,28 +24,25 @@
 
     <!--Jeu 1-->
     <figure>
-      <a href="#" target="_blank"> <img src="https://image.api.playstation.com/vulcan/ap/rnd/202208/0921/dR9KJAKDW2izPbptHQbh3rnj.png" alt="Hogwarts" class="game" /></a>
+      <a href="https://www.amazon.fr/HOGWARTS-LEGACY-LH%C3%89RITAGE-POUDLARD-Playstation/dp/B0BBVR5C16/ref=sr_1_2?crid=2TP52DC3FWS9Q&keywords=hogwarts+legacy+ps5&qid=1674915502&sprefix=hogwarts%2Caps%2C82&sr=8-2" target="_blank"> <img src="https://m.media-amazon.com/images/I/71Sr8Gw9iLL._AC_SL1500_.jpg" alt="Hogwarts" class="game" /></a>
       <figcaption>
         Hogwarts Legacy
       </figcaption>
       <figcaption>
-        84,99€ si en préco avant le 07/02
-      </figcaption>
-      <figcaption>
-        74,99€ si après le 07/02
+        Rupturee de Stock
       </figcaption>
     </figure>
 
-    <!--Jeu 2
+    <!--Jeu 2-->
     <figure>
-      <a href="#" target="_blank"> <img src="https://m.media-amazon.com/images/I/71zjYjmnF7L._AC_SL1000_.jpg" alt="Dead Space" class="game" /></a>
+      <a href="https://www.amazon.fr/Dead-Space-PS5-Vid%C3%A9o-Fran%C3%A7ais/dp/B0BGPLL3D6/ref=sr_1_1?crid=8UTI5NGAYN8J&keywords=dead+space+remake+ps5&qid=1674915549&sprefix=dead%2Caps%2C86&sr=8-1" target="_blank"> <img src="https://m.media-amazon.com/images/I/714hHWpIP4L._AC_SL1500_.jpg" alt="Dead Space" class="game" /></a>
       <figcaption>
         Dead Space
       </figcaption>
       <figcaption>
-        79,99€
+        69,99€
       </figcaption>
-    </figure>-->
+    </figure>
 
     <!--Jeu 3
     <figure>
