--- a/jeuxvideo.html
+++ b/jeuxvideo.html
@@ -22,7 +22,7 @@
 
   <div class="gamesLine">
 
-    <!--Jeu 1-->
+    <!--Jeu 1
     <figure>
       <a href="https://www.amazon.fr/HOGWARTS-LEGACY-LH%C3%89RITAGE-POUDLARD-Playstation/dp/B0BBVR5C16/ref=sr_1_2?crid=2TP52DC3FWS9Q&keywords=hogwarts+legacy+ps5&qid=1674915502&sprefix=hogwarts%2Caps%2C82&sr=8-2" target="_blank"> <img src="https://m.media-amazon.com/images/I/71Sr8Gw9iLL._AC_SL1500_.jpg" alt="Hogwarts" class="game" /></a>
       <figcaption>
@@ -31,7 +31,7 @@
       <figcaption>
         Rupturee de Stock
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Jeu 2-->
     <figure>
