--- a/livres.html
+++ b/livres.html
@@ -5580,35 +5580,38 @@
   </div>
 
   <div class="booksLine">
-    <!--Livre 97
+    <!--Livre 97-->
     <figure>
-      <a href="https://www.amazon.fr/Derri%C3%A8re-porte-verte-Bernard-LIONS/dp/226317463X/ref=msx_wsirn_v1_3?pd_rd_w=KBmBG&pf_rd_p=0a0d9834-bf34-40cf-870c-8760e04a32b7&pf_rd_r=TJ8W0C94D8VJAWGRRDJG&pd_rd_r=2ed4b53a-8dcb-44b2-ae20-3379c41da5fa&pd_rd_wg=1AeVK&pd_rd_i=226317463X&psc=1"
-        target="_blank"> <img src="https://www.amazon.fr/images/I/41by02c4o7L.jpg" alt="Derrière la porte verte" class="books" /></a>
+      <a href="https://www.amazon.fr/Mille-Une-Vies-Billy-Milligan/dp/2253125024/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=1674830621&sr=8-4"
+        target="_blank"> <img src="https://m.media-amazon.com/images/I/61c7AQMGpgL.jpg" alt="Les Mille et une vies de Billy Milligan" class="books" /></a>
       <figcaption>
-        Bernard Lions
+        Daniel Keyes
       </figcaption>
       <figcaption>
-        Derrière la porte verte
+        Les Mille et une vies
       </figcaption>
       <figcaption>
-        17,90€
+        de Billy Milligan
       </figcaption>
-    </figure>-->
+      <figcaption>
+        8,90€
+      </figcaption>
+    </figure>
 
-    <!--Livre 98
+    <!--Livre 98-->
     <figure>
-      <a href="https://www.amazon.fr/vie-continue-Bernard-Pivot/dp/2226451323/ref=msx_wsirn_v1_2?pd_rd_w=KBmBG&pf_rd_p=0a0d9834-bf34-40cf-870c-8760e04a32b7&pf_rd_r=TJ8W0C94D8VJAWGRRDJG&pd_rd_r=2ed4b53a-8dcb-44b2-ae20-3379c41da5fa&pd_rd_wg=1AeVK&pd_rd_i=2226451323&psc=1"
-        target="_blank"> <img src="https://www.amazon.fr/images/I/71RcLpRTVaL.jpg" alt="... Mais la vie continue" class="books" /></a>
+      <a href="https://www.amazon.fr/suite-sera-que-silence/dp/2368900950/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=36MD3AHGFK54F&keywords=La+suite+ne+sera+que+silence&qid=1675188992&sprefix=la+suite+ne+sera+que+silence%2Caps%2C70&sr=8-1"
+        target="_blank"> <img src="https://m.media-amazon.com/images/I/81wc95VTaEL.jpg" alt="La suite ne sera que silence" class="books" /></a>
       <figcaption>
-        Bernard Pivot
+        Christian Bindner
       </figcaption>
       <figcaption>
-        ... Mais la vie continue
+        La suite ne sera que silence
       </figcaption>
       <figcaption>
-        19,90€
+        18,50€
       </figcaption>
-    </figure>-->
+    </figure>
 
     <!--Livre 99
     <figure>
