--- a/jeuxvideo.html
+++ b/jeuxvideo.html
@@ -33,7 +33,7 @@
       </figcaption>
     </figure>-->
 
-    <!--Jeu 2-->
+    <!--Jeu 2
     <figure>
       <a href="https://www.amazon.fr/Dead-Space-PS5-Vid%C3%A9o-Fran%C3%A7ais/dp/B0BGPLL3D6/ref=sr_1_1?crid=8UTI5NGAYN8J&keywords=dead+space+remake+ps5&qid=1674915549&sprefix=dead%2Caps%2C86&sr=8-1" target="_blank"> <img src="https://m.media-amazon.com/images/I/714hHWpIP4L._AC_SL1500_.jpg" alt="Dead Space" class="game" /></a>
       <figcaption>
@@ -42,7 +42,7 @@
       <figcaption>
         69,99€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Jeu 3
     <figure>
