--- a/autres.html
+++ b/autres.html
@@ -21,17 +21,17 @@
   </navbar>
 
   <div class="othersLine">
-    <!--Autres 1
+    <!--Autres 1-->
     <figure>
-      <a href="https://www.amazon.fr/Original-Coll%C3%A8gue-Amoureux-Anniversaire-Plaisir/dp/B093FSM654/ref=sr_1_9?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=2IT6ROK2VG69G&keywords=tasse+bite+enorme&qid=1668301136&qu=eyJxc2MiOiIyLjMzIiwicXNhIjoiMC4wMCIsInFzcCI6IjAuMDAifQ%3D%3D&sprefix=tasse+bite+enorme%2Caps%2C70&sr=8-9" target="_blank"> <img
-          src="https://m.media-amazon.com/images/I/51MXDb8suVL._AC_SL1000_.jpg" alt="Tasse" class="others" /></a>
+      <a href="https://www.amazon.fr/BALIBETOV-Conteneur-Yerba-Mate-Yerbero/dp/B08TGYFN69/ref=d_bmx_dp_g8f6etoo_sccl_3_2/257-0666022-3977509?pd_rd_w=5qW0k&content-id=amzn1.sym.451ebedf-757d-4f53-9e19-67aee92e9c6d&pf_rd_p=451ebedf-757d-4f53-9e19-67aee92e9c6d&pf_rd_r=96TT8QANM7B59KCW43FH&pd_rd_wg=T2mFt&pd_rd_r=9a08d725-fa62-4881-a74a-5928b569180b&pd_rd_i=B08TGYFN69&psc=1" target="_blank"> <img
+          src="https://m.media-amazon.com/images/I/61Pwyyqx46L._AC_SL1390_.jpg" alt="Récipient à Mate" class="others" /></a>
       <figcaption>
-        Tasse
+        Récipient à Mate
       </figcaption>
       <figcaption>
-        19,99€
+        20,49€
       </figcaption>
-    </figure>-->
+    </figure>
 
     <!--Autres 2
     <figure>
