--- a/livres.html
+++ b/livres.html
@@ -69,20 +69,24 @@
       </figcaption>
     </figure>
 
-    <!--Livre 4
+    <!--Livre 4-->
     <figure>
-      <a href="https://www.amazon.fr/Comme-une-valse-Dorothy-PARKER/dp/2264017104/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=MO3CWG3CXEVZ&keywords=dorothy+parker+comme+une+valse&qid=1656614078&sprefix=dorothy+parker+comme+une+valse%2Caps%2C53&sr=8-1" target="_blank"> <img
-          src="https://images-na.ssl-images-amazon.com/images/I/61tP1Dq6TnL.jpg" alt="Comme une valse" class="books" /></a>
+      <a href="https://www.amazon.fr/Bien-s%C3%BBr-que-poissons-froid/dp/2378803494/ref=sr_1_1?keywords=fanny+ruwet&qid=1679415487&sprefix=fanny+ru%2Caps%2C87&sr=8-1" target="_blank"> <img
+          src="https://m.media-amazon.com/images/I/61kTx1mVCWL.jpg" alt="Bien sûr que les poissons ont froid" class="books" /></a>
       <figcaption>
-        Dorothy Parker
+        Fanny Ruwet
       </figcaption>
       <figcaption>
-        Comme une valse
+        Bien sûr que les
       </figcaption>
+    </figcaption>
+    <figcaption>
+      poissons ont froid
+    </figcaption>
       <figcaption>
-        7,10€
+        19,00€
       </figcaption>
-    </figure>-->
+    </figure>
   </div>
 
   <div class="booksLine">
@@ -275,20 +279,20 @@
   </div>
 
   <div class="booksLine">
-    <!--Livre 17
+    <!--Livre 17-->
     <figure>
-      <a href="https://www.amazon.fr/Xavier-Dupont-Ligonn%C3%A8s-grande-enqu%C3%AAte/dp/2501158601/ref=msx_wsirn_v1_sccl_1_1/257-9479405-0879257?pd_rd_w=hSALJ&content-id=amzn1.sym.17c4bd6e-a19d-4594-b7eb-49adc7297939&pf_rd_p=17c4bd6e-a19d-4594-b7eb-49adc7297939&pf_rd_r=6FF0WRGYQFRFQ2ZHFXJH&pd_rd_wg=ebRek&pd_rd_r=5773470b-d92a-40f0-b915-4467e0417b37&pd_rd_i=2501158601&psc=1"
-        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/810yp2et6WL.jpg" alt="Xavier Dupont de Ligonnès - La grande enquête" class="books" /></a>
+      <a href="https://www.amazon.fr/Paris-Yann-Moix/dp/224682348X/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=&sr="
+        target="_blank"> <img src="https://m.media-amazon.com/images/I/5173ZLNechL.jpg" alt="Paris " class="books" /></a>
       <figcaption>
-        Pierre Boisson
+        Yann Moix
       </figcaption>
       <figcaption>
-        La grande enquête
+        Paris
       </figcaption>
       <figcaption>
-        15,90€
+        20,50€
       </figcaption>
-    </figure>-->
+    </figure>
 
     <!--Livre 18-->
     <figure>
