--- a/autres.html
+++ b/autres.html
@@ -33,41 +33,29 @@
       </figcaption>
     </figure>
 
-    <!--Autres 2
+    <!--Autres 2-->
     <figure>
-      <a href="https://boutiquepopcorn.fr/collections/tous-les-produits/products/mug-popcorn" target="_blank"> <img
-          src="https://cdn.shopify.com/s/files/1/0328/2708/0840/products/MugBlanc_480x.jpg?v=1666079664" alt="Mug Popcorn" class="others" /></a>
+      <a href="https://shop.gotaga.tv/accessoires/60-tumbler-list.html" target="_blank"> <img
+          src="https://shop.gotaga.tv/763-large_default/tumbler-list.jpg" alt="Tumblr Gotaga" class="others" /></a>
       <figcaption>
-        Mug Popcorn
+        Tumblr Gotaga
       </figcaption>
       <figcaption>
-        14,94€
+        20,00€
       </figcaption>
-    </figure>-->
+    </figure>
 
-    <!--Autres 3
+    <!--Autres 3-->
     <figure>
-      <a href="https://fnatic.com/products/pro-player-sleeve"
-        target="_blank"> <img src="https://cf-img.fnatic.com/cdn-cgi/image/dpr=1,fit=contain,format=auto,height=3839,width=1536/https://cdn.sanity.io/images/5gii1snx/production/48e9862270ff20e01b3c83d6e1c561d86f09c6f7-5119x3839.jpg" alt="Sleeve Fnatic" class="others" /></a>
+      <a href="https://shop.gotaga.tv/accessoires/58-notebook-gotaga.html"
+        target="_blank"> <img src="https://shop.gotaga.tv/754-large_default/notebook-gotaga.jpg" alt="Sleeve Fnatic" class="others" /></a>
       <figcaption>
-        Manches gaming Fnatic
+        Carnet Gotaga
       </figcaption>
       <figcaption>
-        24,99€
+        15,00€
       </figcaption>
-      <figcaption>
-        Payement par Paypal
-      </figcaption>
-      <figcaption>
-        En cas de commande du bundee (article en dessous),
-      </figcaption>
-      <figcaption>
-        commander les deux ensemble permet d'éviter
-      </figcaption>
-      <figcaption>
-        2x les frais de livraison
-      </figcaption>
-    </figure>-->
+    </figure>
 
     <!--Autres 4
     <figure>
